backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-feeby-deployment
  labels:
    app: backend-feeby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-feeby
  template:
    metadata:
      labels:
        app: backend-feeby
    spec:
      containers:
      - name: backend-feeby
        image: feeby_backend:latest
        imagePullPolicy: Never
        ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-feeby-service
spec:
  selector:
    app: backend-feeby
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
