postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-feeby-deployment
  labels:
    app: postgres-feeby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-feeby
  template:
    metadata:
      labels:
        app: postgres-feeby
    spec:
      containers:
      - name: database-feeby
        image: postgres:14.3
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-feeby-service
spec:
  selector:
    app: postgres-feeby
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
