redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-feeby-deployment
  labels:
    app: redis-feeby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-feeby
  template:
    metadata:
      labels:
        app: redis-feeby
    spec:
      containers:
      - name: redis-feeby
        image: redis
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-feeby-service
spec:
  selector:
    app: redis-feeby
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
