feeby-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feeby-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: feeby-ingress
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: backend-feeby-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-feeby-service
            port:
              number: 80
